<resources>
    <string name="app_name">DietSpy</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nutrients">Nutrients</string>
    <string name="af">Add Foods</string>
    <string name="record">Record</string>
    <string name="cp">Create Plan</string>
    <string name="add_nutrient">Add Nutrient</string>
    <string name="nutrient_name">Nutrient Name</string>
    <string name="target_amount">Target Amount</string>
    <string name="limit_amount">Limit</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="del">Delete</string>
    <string name="edit">Edit Nutrient</string>
    <string name="add_food">Add Food</string>
    <string name="food_name">Food Name</string>
    <string name="nc">Nutrient Contents</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="antf">Add Nutrients To Food</string>
    <string name="efn">Edit Food Nutrient</string>
    <string name="efi">Edit Food Ingredient</string>
    <string name="aitf">Add Ingredients To Food</string>
    <string name="in">Ingredient Name</string>

    <string-array name="food_spinner">
        <item>Nutrients</item>
        <item>Ingredients</item>
    </string-array>

    <string-array name="limits">
        <item>Target</item>
        <item>Limit</item>
    </string-array>

    <string-array name="units">
        <item>g</item>
        <item>mg</item>
        <item>mcg</item>
    </string-array>

    <string-array name="i_units">
        <item>each</item>
        <item>piece</item>
        <item>g</item>
        <item>oz</item>
    </string-array>
</resources>