<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/antf_toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#bcc3f0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/efn"
            android:textColor="@color/black"
            android:textSize="14pt" />

    </Toolbar>

    <TextView
        android:id="@+id/edited_nutrient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/nutrient_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/antf_toolbar2" />

    <LinearLayout
        android:id="@+id/change_nutrient_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/edited_nutrient">


        <EditText
            android:id="@+id/amount_field2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textSize="12pt" />

        <Spinner
            android:id="@+id/units4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3" />
    </LinearLayout>

    <Button
        android:id="@+id/save_nutrient_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="56dp"
        android:text="@string/save"
        android:textSize="6pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_nutrient_field" />

    <Button
        android:id="@+id/delete_nutrient_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="54dp"
        android:text="@string/del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/save_nutrient_changes"
        app:layout_constraintTop_toBottomOf="@+id/change_nutrient_field" />


</androidx.constraintlayout.widget.ConstraintLayout>