<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNutrientFragment">


    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="182dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="32dp"
        android:text="@string/back"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/save_nutrient_button2"
        app:layout_constraintTop_toBottomOf="@+id/target_field_layout" />

    <TextView
        android:id="@+id/nutrient_tag"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="261dp"
        android:text="@string/nutrient_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/antf_toolbar" />

    <Toolbar
        android:id="@+id/antf_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#bcc3f0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/antf"
            android:textColor="@color/black"
            android:textSize="14pt"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="8dp" />

    </Toolbar>


    <AutoCompleteTextView
        android:id="@+id/autoEnterNutrients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="0.7"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nutrient_tag" />


    <LinearLayout
        android:id="@id/target_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoEnterNutrients">


        <EditText
            android:id="@+id/amount_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textSize="12pt" />

        <Spinner
            android:id="@+id/units2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            tools:layout_editor_absoluteX="275dp"
            tools:layout_editor_absoluteY="266dp" />
    </LinearLayout>


    <Button
        android:id="@+id/save_nutrient_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="302dp"
        android:text="@string/save"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/target_field_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>