<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNutrientFragment">


    <Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8BC34A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nutrient_edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/black"
            android:textSize="14pt"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="8dp" />

    </Toolbar>

    <TextView
        android:id="@+id/nutrient_edit_fieldTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="278dp"
        android:text="@string/nutrient_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

    <EditText
        android:id="@+id/nutrient_edit_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:singleLine="true"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nutrient_edit_fieldTag" />


    <Spinner
        android:id="@id/limit_edit_target"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="291dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nutrient_edit_field">
    </Spinner>


    <LinearLayout
        android:id="@id/target_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limit_edit_target">

        <EditText
            android:id="@+id/target_edit_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textSize="12pt" />

        <Spinner
            android:id="@+id/edit_units"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            tools:layout_editor_absoluteX="275dp"
            tools:layout_editor_absoluteY="266dp">

        </Spinner>

    </LinearLayout>

    <Button
        android:id="@+id/ok_nutrient_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="283dp"
        android:text="@string/ok"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/target_field_layout" />

    <Button
        android:id="@+id/delete_nutrient_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="54dp"
        android:text="@string/del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ok_nutrient_button"
        app:layout_constraintTop_toBottomOf="@+id/target_field_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>